# surp

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN_RISKS.md  LICENSE-APACHE  README.md  RELEASE_NOTES.md  SECURITY.md
.agents/skills/surp-cli-testing/: SKILL.md
.agents/skills/surp-cli-testing/agents/: openai.yaml
.agents/skills/surp-python-package/: SKILL.md
.agents/skills/surp-python-package/agents/: openai.yaml
.agents/skills/surp-rfc001/: SKILL.md
.agents/skills/surp-rfc001/agents/: openai.yaml
.agents/skills/surp-rust-codec/: SKILL.md
.agents/skills/surp-rust-codec/agents/: openai.yaml
.github/releases/: v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.1.3.md
.github/workflows/: bench.yml  ci.yml  python-publish.yml
bench/: Cargo.toml
bench/python/: bench_surp.py
bench/src/: datasets.rs  main.rs  report.rs  runner.rs
crous-cli/: Cargo.toml
crous-cli/src/: main.rs
crous-core/src/: block.rs  decoder.rs  encoder.rs  error.rs  lib.rs  text.rs  traits.rs
crous-core/src/rfc001/: ast.rs  cbf.rs  cql.rs  ctn.rs  mod.rs
crous-core/tests/: adversarial.rs  proptest_extended.rs  stress.rs
crous-io/src/: lib.rs
crous-python/: _crous_native.pyi  build.rs  pyproject.toml
crous-python/src/: lib.rs
crous-simd/src/: lib.rs
docs/: CLI.md  EXAMPLES.md  PYTHON_API.md  RFC-001-IMPLEMENTATION.md  RUST_API.md  SPEC.md  TEXT_FORMAT.abnf
docs/assets/bench/v1.0.1/: raw.json  regression_report.md  size_comparison.md  summary.csv  system_info.json
examples/: python_rfc001.py  python_v1.py
examples/data/: user.ctn  user.json  user.surp.txt
examples/rust/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_block.rs  fuzz_compress_corrupt.rs  fuzz_decode.rs  fuzz_dedup.rs  fuzz_limits.rs  fuzz_roundtrip.rs  fuzz_string_dict.rs  fuzz_text.rs  fuzz_varint.rs
python/: pyproject.toml
python-crous/: README.md  pyproject.toml  setup.py
python-crous/crous/: __init__.py
python/crous/: __init__.py
python/surp/: __init__.py  checksum.py  decoder.py  encoder.py  error.py  text.py  value.py  varint.py  wire.py
python/tests/: test_surp.py
surp-cli/: Cargo.toml
surp-cli/src/: main.rs
surp-compression/: Cargo.toml
surp-compression/src/: lib.rs
surp-core/: Cargo.toml
surp-core/benches/: codec_bench.rs
surp-core/src/: block.rs  checksum.rs  decoder.rs  encoder.rs  error.rs  lib.rs  limits.rs  text.rs  traits.rs  value.rs  varint.rs  wire.rs
surp-core/src/rfc001/: ast.rs  cbf.rs  cql.rs  ctn.rs  mod.rs
surp-core/tests/: adversarial.rs  proptest.rs  proptest_extended.rs  roundtrip.rs  stress.rs
surp-derive/: Cargo.toml
surp-derive/src/: lib.rs
surp-derive/tests/: derive_types.rs
surp-ffi/: Cargo.toml  surp.h  test_surp.c
surp-ffi/src/: lib.rs
surp-io/: Cargo.toml
surp-io/src/: lib.rs
surp-python/: Cargo.toml  LICENSE-MIT  README.md  _surp_native.pyi  build.rs  pyproject.toml
surp-python/python/surp/: __init__.py  __init__.pyi  _surp_native.pyi  _types.pyi  exceptions.py  exceptions.pyi  rfc001.py  rfc001.pyi
surp-python/python/surp/model/: __init__.py  __init__.pyi  _base.py  _decode.py  _encode.py  _field.py  _meta.py  _query.py  _registry.py  _schema.py  _stream.py  _validate.py  _variant.py  exceptions.py  stubgen.py  types.py  types.pyi
surp-python/src/: lib.rs
surp-python/tests/: test_native.py
surp-python/tests/model/: test_forward_refs.py  test_model_definition.py  test_reference_stream.py  test_roundtrip.py  test_strict_and_scalar_forms.py  test_stubgen.py  test_sum_tensor_schema_query_document.py  test_symbol_enum.py  test_validation.py
surp-simd/: Cargo.toml
surp-simd/src/: lib.rs
