[workspace]
members = [
    "crous-core",
    "crous-derive",
    "crous-io",
    "crous-cli",
    "crous-compression",
    "crous-ffi",
    "crous-simd",
    "crous-python",
    "bench",
]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
version = "1.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Pawan Kumar"]
repository = "https://github.com/axiomchronicles/crous"
homepage = "https://github.com/axiomchronicles/crous"
documentation = "https://docs.rs/crous-core"
description = "A compact, canonical binary serializer and human-readable alternative to JSON"
readme = "README.md"
keywords = ["serialization", "binary", "encoding", "codec", "format"]
categories = ["encoding", "data-structures", "parser-implementations"]
rust-version = "1.85.0"

[workspace.dependencies]
crous-core = { path = "crous-core", version = "1.1.3" }
crous-derive = { path = "crous-derive", version = "1.1.3" }
crous-compression = { path = "crous-compression", version = "1.1.3" }
crous-io = { path = "crous-io", version = "1.1.3" }
crous-ffi = { path = "crous-ffi", version = "1.1.3" }
crous-simd = { path = "crous-simd", version = "1.1.3" }
thiserror = "2"
# XXH3 rationale: https://xxhash.com/ — XXH3 offers ~2x throughput over XXH64
xxhash-rust = { version = "0.8", features = ["xxh64", "xxh3"] }
# CRC32 compat: https://docs.rs/crc32fast — backward-compatible checksum option
crc32fast = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
base64 = "0.22"
# Zero-copy shared buffers: https://docs.rs/bytes
bytes = "1.10"
# Memory-mapped I/O: https://docs.rs/memmap2
memmap2 = "0.9"
# Bump allocator for per-block decode scratch: https://docs.rs/bumpalo
bumpalo = "3.17"
