[workspace]
members = [
    "surp-core",
    "surp-derive",
    "surp-io",
    "surp-cli",
    "surp-compression",
    "surp-ffi",
    "surp-simd",
    "surp-python",
    "examples/rust",
    "bench",
]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
version = "1.0.2"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Pawan Kumar"]
repository = "https://github.com/tubox-labs/surp"
homepage = "https://github.com/tubox-labs/surp"
documentation = "https://docs.rs/surp-core"
description = "A compact, canonical binary serializer and human-readable alternative to JSON"
readme = "README.md"
keywords = ["serialization", "binary", "encoding", "codec", "format"]
categories = ["encoding", "data-structures", "parser-implementations"]
rust-version = "1.85.0"

[workspace.dependencies]
surp-core = { path = "surp-core", version = "1.0.2" }
surp-derive = { path = "surp-derive", version = "1.0.2" }
surp-compression = { path = "surp-compression", version = "1.0.2" }
surp-io = { path = "surp-io", version = "1.0.2" }
surp-ffi = { path = "surp-ffi", version = "1.0.2" }
surp-simd = { path = "surp-simd", version = "1.0.2" }
thiserror = "2"
# XXH3 rationale: https://xxhash.com/ — XXH3 offers ~2x throughput over XXH64
xxhash-rust = { version = "0.8", features = ["xxh64", "xxh3"] }
# CRC32 compat: https://docs.rs/crc32fast — backward-compatible checksum option
crc32fast = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
base64 = "0.22"
# Zero-copy shared buffers: https://docs.rs/bytes
bytes = "1.10"
# Memory-mapped I/O: https://docs.rs/memmap2
memmap2 = "0.9"
# Bump allocator for per-block decode scratch: https://docs.rs/bumpalo
bumpalo = "3.17"
