[package]
name = "surp-bench"
version = "0.1.0"
edition = "2024"
publish = false
description = "Regression benchmark harness for the Surp serialization ecosystem"

[dependencies]
surp-core = { path = "../surp-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"               # MessagePack
ciborium = "0.2"               # CBOR
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
tabled = "0.18"

# Tracking allocator (optional, Linux/macOS)
[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[features]
default = []
jemalloc = ["tikv-jemallocator"]
