[package]
name = "crous-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
description = "CLI tool for inspecting, pretty-printing, and converting Crous files"
documentation = "https://docs.rs/crous-cli"
keywords = ["serialization", "binary", "cli", "inspect", "crous"]
categories = ["encoding", "command-line-utilities"]
rust-version.workspace = true

[[bin]]
name = "crous"
path = "src/main.rs"

[features]
default = []
zstd = ["crous-core/zstd"]
lz4 = ["crous-core/lz4"]
snappy = ["crous-core/snappy"]

[dependencies]
crous-core = { workspace = true }
clap = { workspace = true, features = ["env"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
