[package]
name = "surp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
surp-core = { path = "../surp-core" }
arbitrary = { version = "1", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[[bin]]
name = "fuzz_decode"
path = "fuzz_targets/fuzz_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_text"
path = "fuzz_targets/fuzz_text.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_varint"
path = "fuzz_targets/fuzz_varint.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_block"
path = "fuzz_targets/fuzz_block.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_string_dict"
path = "fuzz_targets/fuzz_string_dict.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_compress_corrupt"
path = "fuzz_targets/fuzz_compress_corrupt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_limits"
path = "fuzz_targets/fuzz_limits.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_dedup"
path = "fuzz_targets/fuzz_dedup.rs"
test = false
doc = false
bench = false
