[package]
name = "surp-compression"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
description = "Pluggable compression adapters (zstd, lz4, snappy) for Surp blocks"
documentation = "https://docs.rs/surp-compression"
keywords = ["compression", "zstd", "lz4", "snappy", "surp"]
categories = ["compression", "encoding"]
rust-version.workspace = true

[dependencies]
surp-core = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
zstd = ["dep:zstd"]
lz4 = ["dep:lz4_flex"]
snappy = ["dep:snap"]

[dependencies.zstd]
version = "0.13"
optional = true

# Pure-Rust LZ4: https://github.com/PSeitz/lz4_flex
[dependencies.lz4_flex]
version = "0.11"
optional = true

[dependencies.snap]
version = "1"
optional = true
