[package]
name = "surp-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
description = "Proc-macro derive for Surp schema-bound types with stable field IDs"
documentation = "https://docs.rs/surp-derive"
keywords = ["serialization", "derive", "proc-macro", "codec", "surp"]
categories = ["encoding", "development-tools::procedural-macro-helpers"]
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
xxhash-rust = { workspace = true }

[dev-dependencies]
surp-core = { workspace = true }
