[package]
name = "surp-io"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
description = "Async IO adapters, framed streams, and mmap reader for Surp"
documentation = "https://docs.rs/surp-io"
keywords = ["async", "io", "streaming", "tokio", "surp"]
categories = ["asynchronous", "encoding", "network-programming"]
rust-version.workspace = true

[features]
default = []
# Memory-mapped zero-copy reader: https://docs.rs/memmap2
mmap = ["dep:memmap2"]

[dependencies]
surp-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
memmap2 = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
