[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "surp"
version = "1.0.1"
description = "Native Rust-backed Surp encoder/decoder with RFC-001 CTN/CBF/CQL support"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"
authors = [
    { name = "Pawan Kumar" }
]
keywords = ["serialization", "binary", "encoder", "decoder", "surp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/tubox-labs/surp"
Repository = "https://github.com/tubox-labs/surp"
Documentation = "https://github.com/tubox-labs/surp/blob/master/docs/PYTHON_API.md"
"Bug Tracker" = "https://github.com/tubox-labs/surp/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
python-source = "python"
module-name = "surp._surp_native"
include = [
    { path = "README.md", format = "sdist" },
    { path = "LICENSE-MIT", format = "sdist" },
    { path = "LICENSE-APACHE", format = "sdist" },
    { path = "LICENSE-MIT", format = "wheel" },
    { path = "LICENSE-APACHE", format = "wheel" },
    { path = "python/surp/**/*.py", format = "sdist" },
    { path = "python/surp/**/*.py", format = "wheel" },
    { path = "python/surp/**/*.pyi", format = "sdist" },
    { path = "python/surp/**/*.pyi", format = "wheel" },
    { path = "python/surp/py.typed", format = "sdist" },
    { path = "python/surp/py.typed", format = "wheel" },
    { path = "python/surp/model/py.typed", format = "sdist" },
    { path = "python/surp/model/py.typed", format = "wheel" },
]
